--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BredditApp</title>
+  <title>Breddit the frontpage of the Bakery</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+  <% if current_user %>
+  <ul>
+    <li><%= link_to "Create a sub!", new_sub_url %></li>
+    <li><%= link_to "All Subs", subs_url %></li>
+    <li><%= button_to "Logout", session_url, method: :delete %></li>
+  </ul>
+  <% else %>
+  <%= link_to "Sign in!", new_session_url %>
+  <br><br>
+  <% end %>
 
 <% if flash[:errors] %>
   <% flash[:errors].each do |error| %>
