--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,18 +2,15 @@
 <html>
 <head>
   <title>Breddit the frontpage of the Bakery</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
   <% if current_user %>
-  <ul>
-    <li><%= link_to "Create a sub!", new_sub_url %></li>
-    <li><%= link_to "All Subs", subs_url %></li>
-    <li><%= button_to "Logout", session_url, method: :delete %></li>
-  </ul>
+    <%= current_user.username %>
+    <%= button_to "Sign Out", session_url, method: :delete %>
   <% else %>
   <%= link_to "Sign in!", new_session_url %>
   <br><br>
