--- a/app/assets/templates/comments/form.jst.ejs
+++ b/app/assets/templates/comments/form.jst.ejs
@@ -1,11 +1,9 @@
 <h3>New Comment</h3>
 
 <form>
-  <label>Comment Content
-    <textarea name="body"></textarea>
-  </label>
+  <textarea class="new_com" name="body">New comment</textarea>
 
-  <button>Create Comment</button>
+  <button>save</button>
 </form>
 
 <div class="preview">
