--- a/app/assets/stylesheets/subreddits.css.scss
+++ b/app/assets/stylesheets/subreddits.css.scss
@@ -1,3 +1,55 @@
 // Place all the styles related to the Subreddits controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.titlerow {
+  margin-top: 0px;
+  margin-bottom: 1px;
+  display: block;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  font-size: medium;
+  margin-right: 5px;
+}
+
+.description{
+  font: normal x-small verdana,arial,helvetica,sans-serif;
+  font-size: small;
+  max-width: 60em;
+  padding: 2px 5px;
+  background-color: #fafafa;
+  border: 1px solid #CCC;
+  border-radius: 7px;
+}
+
+//subreddit_show
+
+.page-name {
+  font-weight: bold;
+  margin-right: 1ex;
+  font-variant: small-caps;
+  font-size: 1em;
+  vertical-align: bottom;
+  text-transform: lowercase;
+  position: absolute;
+  top: 48px;
+  left: 65px;
+}
+
+.side {
+  float: right;
+  background-color: white;
+  margin: 200px 5px 0 5px;
+  width: 300px;
+  display: block;
+}
+
+.titlebox h1 {
+  font-family: arial,verdana,helvetica,sans-serif;
+  margin: 0px;
+  margin-bottom: 5px;
+  font-weight: bold;
+  font-size: 19px;
+  text-transform: lowercase;
+}
