--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ *= require posts
+ *= require comments
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
