--- a/app/assets/templates/comments/form.jst.ejs
+++ b/app/assets/templates/comments/form.jst.ejs
@@ -1,13 +1,14 @@
-<h3>New Comment</h3>
-
 <form>
-  <textarea class="new_com" name="body">New comment</textarea>
+  <textarea class="new_com" name="body" rows"1" cols="1">New comment</textarea>
 
-  <button>save</button>
 </form>
+<br>
+<button class="save_com">save</button>
 
 <div class="preview">
 </div>
 
-<div class="post_comments">
-</div>
+<div class="panestack-title"></div>
+
+
+<div class="post_comments"></div>
