--- a/app/assets/templates/posts/index.jst.ejs
+++ b/app/assets/templates/posts/index.jst.ejs
@@ -1,25 +1,37 @@
-<h3>Welcome to the Front Page!</h3>
-<div>
-  <ol>
+<p class="animated zoomIn">trending subreddits</p>
+<div class="content">
+  <div class="spacer">
+    <div id="siteTable" class="sitetable">
+      <% posts.each(function (post) { %>
+          <div class="link">
 
-    <% posts.each(function (post) { %>
-      <li>
-        <a class="post-ind-show" target="_blank" href="<%= post.escape("url")%>">
-          <img src="<%= post.escape("url")%>" width="70" height="70">
-          <%= post.escape("title") %></a>
+            <span class="rank"></span>
 
-        <p> submitted <%= post.escape("time_ago") %> ago by <%= post.escape("user_name") %>
-          to
-        <a href="#/subreddits/<%= post.escape("subreddit_id")%>"> <%= post.escape("subreddit_name") %> </p>
-        <a class= "post-comments" href="#/posts/<%= post.get('id') %>"><%= post.escape("comments_count") %> comments</a>
-      </li>
+            <div class="midcol">
+              <div class="upvote" data-id="<%= post.id %>">Up</div>
+              <p class="votecount"><%= post.escape("vote_count") %></p>
+              <div class="downvote" data-id="<%= post.id %>">Down</div>
+            </div>
 
-      <p>Vote Count:<%= post.escape("vote_count") %></p>
-      <button class="upvote" data-id="<%= post.id %>">Upvote</button>
-      <button class="downvote" data-id="<%= post.id %>">Downvote</button>
-    <% }); %>
+            <a class="thumbnail" href="<%= post.escape("url")%>" target="_blank">
+              <img src="<%= post.escape("url")%>">
+            </a>
 
-  </ol>
+            <div class="entry">
+              <a href="<%= post.escape("url")%>" target="_blank">
+                <p class="title"><%= post.escape("title") %></p>
+              </a>
+
+              <p class="infoline"> submitted <%= post.escape("time_ago") %> ago by <a href=""><%= post.escape("user_name") %></a> to
+                <a href="#/subreddits/<%= post.escape("subreddit_id")%>"> <%= post.escape("subreddit_name") %></a>
+                <br>
+                <a class="first" href="#/posts/<%= post.get('id') %>"><%= post.escape("comments_count") %> comments</a>
+                <a class="share" href="">share</a>
+              </p>
+            </div>
+
+          </div>
+      <% }); %>
+    </div>
+  </div>
 </div>
-
-<ul class="subs"></ul>
