--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -1,19 +1,37 @@
-<h4>
-  <a target="_blank" href="<%= post.escape("url")%>">
-    <img src="<%= post.escape("url")%>" width="70" height="70">
-    <%= post.escape("title") %></a>
-</h4>
+<div id="siteTable" class="sitetable">
+    <div class="link">
+      <span class="rank"></span>
 
-  <p>Content: <%= post.escape("content") %></p>
-  <p>Subreddit:
-    <a href="#/subreddits/<%= post.escape("subreddit_id")%>">
-       <%= post.escape("subreddit_name") %></a>
-  </p>
+      <div class="midcol">
+        <div class="upvote" data-id="<%= post.id %>">Up</div>
+        <p class="votecount"><%= post.escape("vote_count") %></p>
+        <div class="downvote" data-id="<%= post.id %>">Down</div>
+      </div>
+
+      <a class="thumbnail" href="<%= post.escape("url")%>" target="_blank">
+        <img src="<%= post.escape("url")%>">
+      </a>
+
+      <div class="entry">
+        <a href="<%= post.escape("url")%>" target="_blank">
+          <p class="title"><%= post.escape("title") %></p>
+        </a>
+
+        <p class="infoline"> submitted <%= post.escape("time_ago") %> ago by <%= post.escape("user_name") %> to
+          <a href="#/subreddits/<%= post.escape("subreddit_id")%>"> <%= post.escape("subreddit_name") %></a>
+          <br>
+          <a class="first" href="#/posts/<%= post.get('id') %>"><%= post.escape("comments_count") %> comments</a>
+          <a class="share" href="">share</a>
+        </p>
+      </div>
+
+    </div>
+
+    <p class="cont"><%= post.escape("content") %>
+
   <% if (post.escape('owns_post') === 'true') { %>
     <button class="delete-post">Delete Post</button>
   <% }; %>
 
 <div class="comments-new"></div>
 <div class="comments-div"></div>
-
-<a href="#">Back to Posts Index</a>
