--- a/app/assets/templates/subreddits/show.jst.ejs
+++ b/app/assets/templates/subreddits/show.jst.ejs
@@ -1,34 +1,46 @@
-<div class= "show-subreddit-header">
-  <h3><%= subreddit.escape("name") %></h3>
-  <p><%= subreddit.escape("description") %></p>
-  <button>Subscribe</button>
+<span class="page-name"><%= subreddit.escape("name") %></span>
+
+<div class="side">
+  <h1><%= subreddit.escape("name") %></h1>
+    <p><%= subreddit.escape("description") %></p>
+  <button class="sub-button">Subscribe</button>
 </div>
 
-<br>
 
-<div class="subreddit-posts">
-  <ol>
-    <% posts.each(function(post){ %>
+<div class="content">
+  <div class="spacer">
+    <div id="siteTable" class="sitetable">
+      <% posts.each(function (post) { %>
         <% if (post.get('sub_id') === subreddit.id){ %>
-          <li>
-            <a href="#/posts/<%= post.get('id') %>">
-              <img src="<%= post.escape("url")%>" width="70" height="70">
-              <%= post.escape('title') %></a>
-            <p> submitted by <%= post.escape("user_name") %>
-              to <a href="#/subreddits/<%= post.escape("subreddit_id")%>"> <%= post.escape("subreddit_name") %> </p>
-            <a class= "post-comments" href="#/posts/<%= post.get('id') %>"><%= post.escape("comments_count") %> comments</a>
-          </li>
+          <div class="link">
 
-          <p>Vote Count:<%= post.escape("vote_count") %></p>
-          <button class="upvote" data-id="<%= post.id %>">Upvote</button>
-          <button class="downvote" data-id="<%= post.id %>">Downvote</button>
+            <span class="rank"></span>
 
-        <% } %>
-    <% }); %>
-  </ol>
-</div>
+            <div class="midcol">
+              <div class="upvote" data-id="<%= post.id %>">Up</div>
+              <p class="votecount"><%= post.escape("vote_count") %></p>
+              <div class="downvote" data-id="<%= post.id %>">Down</div>
+            </div>
 
+            <a class="thumbnail" href="<%= post.escape("url")%>" target="_blank">
+              <img src="<%= post.escape("url")%>">
+            </a>
 
+            <div class="entry">
+              <a href="<%= post.escape("url")%>" target="_blank">
+                <p class="title"><%= post.escape("title") %></p>
+              </a>
 
-<br>
-<a href="#">Back to SuBreddits Index</a>
+              <p class="infoline"> submitted <%= post.escape("time_ago") %> ago by <%= post.escape("user_name") %> to
+                <a href="#/subreddits/<%= post.escape("subreddit_id")%>"> <%= post.escape("subreddit_name") %></a>
+                <br>
+                <a class="first" href="#/posts/<%= post.get('id') %>"><%= post.escape("comments_count") %> comments</a>
+                <a class="share" href="">share</a>
+              </p>
+            </div>
+          </div>
+          <% } %>
+        <% }); %>
+      </div>
+    </div>
+  </div>
