--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,41 @@
-<h1>New User!</h1>
+<script>
+$(document).ready(function () {
 
-<form action="<%= users_url %>" method="post">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <label for="user_username">Username</label>
-  <input type="text" name="user[username]" value="<%= @user.username %>" id="user_username">
+  $(".player").mb_YTPlayer();
 
-  <label for="user_password">Password</label>
-  <input type="password" name="user[password]" id="user_password">
+});
+</script>
 
-  <input type="submit">
-</form>
+<!-- Warming Up -->
+<link href='http://fonts.googleapis.com/css?family=Buenard:700' rel='stylesheet' type='text/css'>
+<script src="http://pupunzi.com/mb.components/mb.YTPlayer/demo/inc/jquery.mb.YTPlayer.js"></script>
+
+<!--Video Section-->
+<section class="content-section video-section">
+  <div class="pattern-overlay">
+    <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=ybp-30dkt5w',containment:'.video-section', quality:'large', autoPlay:true, mute:true, opacity:1}">bg</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1>breddit</h1>
+
+
+          <form action="<%= users_url %>" method="post">
+            <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+            <label for="user_username">Username</label>
+            <input type="text" name="user[username]" value="<%= @user.username %>" id="user_username">
+
+            <label for="user_password">Password</label>
+            <input type="password" name="user[password]" id="user_password">
+
+            <input type="submit">
+          </form>
+
+
+          <h3>Please create account.</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!--Video Section Ends Here-->
