--- a/app/assets/templates/messages/show.jst.ejs
+++ b/app/assets/templates/messages/show.jst.ejs
@@ -59,6 +59,16 @@
       <p class="md-p">I am so flattered that you would reply to my post. :) </p>
     </div>
   </div>
-  
+
+    <div class="message">
+    <p class="msg-subject">
+      <span>comment reply</span>
+      <a href="" class="msg-title">I am stuck outside</a>
+    </p>
+    <p class="msg-tagline"> from <a href="">Varun</a> via <a href="">appacademy</a> sent 30 days ago</p>
+    <div class="md-container">
+      <p class="md-p">Hey man I'm stuck in the elevator.</p>
+    </div>
+  </div>
 
 </div>
