--- a/app/assets/templates/subreddits/show.jst.ejs
+++ b/app/assets/templates/subreddits/show.jst.ejs
@@ -3,7 +3,10 @@
 <div class="side">
   <h1><%= subreddit.escape("name") %></h1>
     <p><%= subreddit.escape("description") %></p>
-  <button class="sub-button">Subscribe</button>
+  <span class="sub-button">
+    <a class="sub-option">subscribe</a>
+  </span>
+
 </div>
 
 
