--- a/app/assets/templates/posts/index.jst.ejs
+++ b/app/assets/templates/posts/index.jst.ejs
@@ -8,9 +8,9 @@
             <span class="rank"></span>
 
             <div class="midcol">
-              <div class="upvote" data-id="<%= post.id %>">Up</div>
-              <p class="votecount"><%= post.escape("vote_count") %></p>
-              <div class="downvote" data-id="<%= post.id %>">Down</div>
+              <div class="upvote" data-id="<%= post.id %>"></div>
+              <div class="votecount"><%= post.escape("vote_count") %></div>
+              <div class="downvote" data-id="<%= post.id %>"></div>
             </div>
 
             <a class="thumbnail" href="<%= post.escape("url")%>" target="_blank">
