--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,6 +1,11 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  height: 100%;
+  position: relative;
+}
+
 #header {
   background-color: #CEE3F8;
   border: 1px solid #5F99CF;
@@ -176,6 +181,11 @@ div.subtitle {
   margin-left: 100px;
   color: gray;
   font-size: 70%;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
 }
 
 div.footer-parent {
