--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -5,7 +5,8 @@
   margin: 7px 5px 0px 5px;
   margin-left: 15px;
   display: block;
-  position: relative;
+  position: absolute;
+  width: 1000px;
 }
 
 .content .spacer {
