--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
 
   <div id="header">
       <ul class="subs-head">Default subs:
-        <li> <a class="animated zoomIn" href="#/subreddits/58">EpicMemers</a> - </li>
-        <li> <a class="animated zoomIn" href="#/subreddits/54">HoeDown</a> - </li>
-        <li> <a class="animated zoomIn" href="#/subreddits/56">Awwww</a> - </li>
-        <li> <a class="animated zoomIn" href="#/subreddits/57">Robotz</a> - </li>
-        <li> <a class="animated zoomIn" href="#/subreddits/59">BreadTelepathy</a> - </li>
+        <li> <a class="animated zoomIn" href="#/subreddits/1">EpicMemers</a> - </li>
+        <li> <a class="animated zoomIn" href="#/subreddits/2">HoeDown</a> - </li>
+        <li> <a class="animated zoomIn" href="#/subreddits/3">Awwww</a> - </li>
+        <li> <a class="animated zoomIn" href="#/subreddits/4">Roboz</a> - </li>
+        <li> <a class="animated zoomIn" href="#/subreddits/5">BreadTelepathy</a> - </li>
         <li> <a class="animated zoomIn" href="#/subreddits">All</a> </li>
       </ul>
       <a href="/#" style="color:black;text-decoration:none"><img class="bay" src="/bay.jpg" alt="baymax" style="width:28px;height:28px;margin-left:10px"><span class="breddit">breddit</span></a>
@@ -103,37 +103,5 @@
 
 
 </body>
-<footer>
-<div class="footer-parent">
-  <div class="footer-rounded">
 
-    <div class="foot-col">
-      <ul class="flat-vert-hover">
-        <li class="flat-vert-title">about</li>
-      </ul>
-    </div>
-
-    <div class="foot-col">
-      <ul class="flat-vert-hover">
-        <li class="flat-vert-title">help</li>
-      </ul>
-    </div>
-
-    <div class="foot-col">
-      <ul class="flat-vert-hover">
-        <li class="flat-vert-title">tools</li>
-      </ul>
-    </div>
-
-    <div class="foot-col">
-      <ul class="flat-vert-hover">
-        <li class="flat-vert-title">:3</li>
-      </ul>
-    </div>
-
-  </div>
-</div>
-
-
-</footer>
 </html>
