heroku amazon sprite

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -48,7 +48,7 @@ div.link {
 }
 
 .upvote {
-  background-image: url('sprite-reddit.png');
+  background-image: url('https://s3.amazonaws.com/bredditapp/sprite-reddit.png');
   background-position: -42px -818px;
   height: 14px;
   width: 15px;
@@ -67,7 +67,7 @@ div.link {
 }
 
 .downvote {
-  background-image: url('sprite-reddit.png');
+  background-image: url('https://s3.amazonaws.com/bredditapp/sprite-reddit.png');
   background-position: 0px -818px;
   height: 14px;
   width: 15px;
