--- a/app/assets/stylesheets/subscriptions.css.scss
+++ b/app/assets/stylesheets/subscriptions.css.scss
@@ -14,7 +14,7 @@
 }
 
 .sub-option {
-  background-image: url('sprite-reddit.png');
+  background-image: url('https://s3.amazonaws.com/bredditapp/sprite-reddit.png');
   background-position: 0px -182px;
   background-repeat: repeat;
   width: 68px;
